<resources>
    <string name="app_name">Dilo Absensi</string>
    <string name="action_settings">Settings</string>
    <string name="content">Content</string>
    <string name="format">Format</string>
    <string name="scan">Scan</string>
    <string name="daftar">Daftar</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="add">Add</string>
    <string name="simpan">Simpan</string>
    <string name="acara">Acara</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="gambar">Gambar</string>
    <string name="upload">Upload</string>
</resources>
