<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_acara"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ooi.diloabsensi.InputAcara"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/saveacara"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:textColor="@color/white"
        android:text="@string/simpan"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/saveacara">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:hint="@string/tanggal"
            android:id="@+id/input_tanggal"
            android:focusable="false"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_tanggal"
            android:id="@+id/input_waktu"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:hint="@string/waktu"
            android:focusable="false"
            />



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_waktu"
            android:id="@+id/gambargroup">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/default_thumbnail"
                android:id="@+id/ivgambar"/>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@color/primary"
                android:textColor="@color/white"
                android:layout_toRightOf="@id/ivgambar"
                android:layout_toEndOf="@id/ivgambar"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:text="@string/upload"
                android:id="@+id/uploadgbrbtn"/>

        </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/input_acara"
        android:layout_below="@id/gambargroup"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/edit_acara"
            android:hint="@string/acara"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/input_acara"
        android:id="@+id/input_deskripsi"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/deskripsi"
            android:id="@+id/edit_deskripsi"
            />
    </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    </ScrollView>
</RelativeLayout>
